Fix Get All Car
